# pi-ipython

./: .gitignore  .npmignore  CHANGELOG.md  Cargo.toml  README.md  build.ts  package.json  tsconfig.json
crates/gateway/: Cargo.toml
crates/gateway/src/: health.rs  lib.rs  port.rs  process.rs
crates/pi-ipython-cli/: Cargo.toml
crates/pi-ipython-cli/src/: main.rs
docs/plans/: 2026-05-01-code-review-fixes.md
python/: prelude.py
skills/eval/: SKILL.md
src/: cancellation.ts  executor.ts  kernel.ts  parse.ts  pi-env.d.ts  pi-ipython.ts  prelude.ts  runtime.ts  snowflake.ts  types.ts
src/bindings/: binary.ts  gateway.ts  spawn.ts
tests/: executor.test.ts  kernel.test.ts  parse.test.ts  runtime.test.ts
