[package]
name = "pi-ipython-cli"
version = "0.1.0"
edition = "2021"
description = "pi-ipython CLI binary — Jupyter kernel gateway management"

[[bin]]
name = "pi-ipython-cli"
path = "src/main.rs"

[dependencies]
gateway = { path = "../gateway" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
